fix backend compatibility and agent proxy APIs